resolve menu display bug on smaller screens

--- a/sites/all/themes/webarch/assets/css/responsive.css
+++ b/sites/all/themes/webarch/assets/css/responsive.css
@@ -174,43 +174,43 @@ and (min-width : 1824px) {
 		margin:0;
 	}
 
-	.page-sidebar > ul{
+	.page-sidebar ul.menu{
 		width: 50px;
 		margin:0;
 		padding-top: 60px;
 	}
-	.page-sidebar  > ul > li > a{
+	.page-sidebar ul.menu > li > a{
 			padding: 13px;
 			color:#fff;
 	}
-	.page-sidebar > ul > li a i{
+	.page-sidebar ul.menu > li a i{
 			color:#fff;
 	}
 	.page-sidebar .user-info{
 		display:none;
 	}
-	.page-sidebar> p{
+	.page-sidebar p.menu-title {
 		display:none;
 	}
-	.page-sidebar > .status-widget{
+	.page-sidebar .status-widget{
 		display:none;
 	}
-	.page-sidebar > .notification-alert{
+	.page-sidebar .notification-alert{
 		display:none;
 	}
-	.page-sidebar > ul li span.title{
+	.page-sidebar ul.menu li span.title{
 		display:none;
 	}
-	.page-sidebar >ul li span.arrow {
+	.page-sidebar ul.menu li span.arrow {
 		display:none;
 	}
-	.page-sidebar > ul li ul li span.title{
+	.page-sidebar ul.menu li ul li span.title{
 		display:inline;
 	}
-	.page-sidebar >ul li  ul li span.arrow {
+	.page-sidebar ul.menu li  ul li span.arrow {
 		display:inline;
 	}
-	.page-sidebar > ul li span.badge  {
+	.page-sidebar ul.menu li span.badge  {
 		display:none;
 	}
 
@@ -221,14 +221,14 @@ and (min-width : 1824px) {
 	.page-sidebar{
 		 background-color: #0aa699 !important;
 	}	
-	.page-sidebar > ul > li >a:hover, 
-	.page-sidebar > ul > li:hover >a {  
+	.page-sidebar ul.menu > li >a:hover, 
+	.page-sidebar ul.menu > li:hover >a {  
 		background: #0b9c8f;
 	}
-	.page-sidebar > ul > li.open > a, .page-sidebar > ul > li > a:hover, .page-sidebar > ul > li:hover > a{
+	.page-sidebar ul.menu > li.open > a, .page-sidebar ul.menu > li > a:hover, .page-sidebar ul.menu > li:hover > a{
 		padding: 13px;
 	}
-	.page-sidebar  > ul > li > ul.sub-menu{
+	.page-sidebar ul.menu > li > ul.sub-menu{
 		position:absolute;
 		margin-top:-46px;
 		margin-left:50px;
@@ -237,7 +237,7 @@ and (min-width : 1824px) {
 		min-width:250px;
 	}
 	
-	.page-sidebar > .side-bar-widgets{
+	.page-sidebar .side-bar-widgets{
 		display:none;	
 	}
 	.footer-widget{
@@ -318,57 +318,57 @@ and (orientation : portrait) {
 	.page-sidebar> p{
 		display:block;
 	}
-	.page-sidebar > .status-widget{
+	.page-sidebar .status-widget{
 		display:block;
 	}
-	.page-sidebar > .notification-alert{
+	.page-sidebar .notification-alert{
 		display:inline-block;
 	}
 	
-	.page-sidebar > ul li span.title{
+	.page-sidebar ul.menu li span.title{
 		display:inline-block;
 	}
-	.page-sidebar >ul li span.arrow {
+	.page-sidebar ul.menu li span.arrow {
 		display:inline-block;
 		float: right;
 	}
 
-	.page-sidebar > ul li span.badge  {
+	.page-sidebar ul.menu li span.badge  {
 		display:inline-block;
 	}
-    .page-sidebar > ul{
+    .page-sidebar ul.menu {
 		width: 260px;
 		padding-top: 0px !important;
 	}
-	.page-sidebar  .profile-wrapper  {
+	.page-sidebar .profile-wrapper  {
 		display:inline-block;
 	}
 
-	.page-sidebar > .side-bar-widgets{
+	.page-sidebar .side-bar-widgets{
 		display:block;	
 	}
 	.footer-widget{
 		display:block;
 	}
 
-	.page-sidebar > ul > li > a {
+	.page-sidebar ul.menu > li > a {
 	  padding: 11.5px 31px 11.5px 31px;
 	  color:#8B91A0;
 	}
 	
-	.page-sidebar > ul > li >a:hover, 
-	.page-sidebar > ul > li:hover >a {  
+	.page-sidebar ul.menu > li >a:hover, 
+	.page-sidebar ul.menu > li:hover >a {  
 		background: #1b1e24;
 	}
-	.page-sidebar > ul > li.open > a, .page-sidebar > ul > li > a:hover, .page-sidebar > ul > li:hover > a{
+	.page-sidebar ul.menu > li.open > a, .page-sidebar ul.menu > li > a:hover, .page-sidebar ul.menu > li:hover > a{
 		  padding: 11.5px 31px 11.5px 31px;
 	}
 	
-	.page-sidebar > ul > li > a i {	 
+	.page-sidebar ul.menu > li > a i {	 
 	    color:#8B91A0;
 	}
 
-	.page-sidebar > ul > li > ul.sub-menu {
+	.page-sidebar ul.menu > li > ul.sub-menu {
 		position:relative;
 		margin:0px;
 	}
